--- a/library.html
+++ b/library.html
@@ -10,14 +10,17 @@
   <style>
     body { background: #fff; color: #000; font-family: Arial, sans-serif; margin: 0; padding: 20px; }
     h1 { font-size: 28px; margin-bottom: 20px; }
-    .upload-section { margin-bottom: 30px; }
-    button, input[type=file] {
+    .upload-section { margin-bottom: 30px; display: flex; gap: 10px; flex-wrap: wrap; }
+    button, input[type=file], select {
       background: #000; color: #fff; border: none; padding: 10px 15px;
       border-radius: 6px; cursor: pointer; font-size: 14px;
     }
     button:hover { opacity: 0.85; }
     .progress-bar { width: 100%; height: 6px; background: #ddd; margin-top: 10px; border-radius: 3px; }
     .progress-bar-inner { width: 0%; height: 100%; background: #000; transition: width 0.4s; border-radius: 3px; }
+    .tabs { display: flex; gap: 15px; margin-bottom: 20px; }
+    .tabs button { background: none; border: none; color: #000; font-size: 16px; cursor: pointer; }
+    .tabs button.active { font-weight: bold; text-decoration: underline; }
     .grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; }
     .card {
       border: 1px solid #000; border-radius: 8px; padding: 15px; background: #fff;
@@ -41,11 +44,27 @@
 
   <h1>📂 Sitegen Library</h1>
 
+  <!-- Upload -->
   <div class="upload-section">
-    <input type="file" id="fileInput" accept=".zip">
+    <select id="uploadType">
+      <option value="template">Template (ZIP)</option>
+      <option value="block">Block (HTML/JS)</option>
+      <option value="theme">Theme (CSS)</option>
+      <option value="subscription">Subscription Box (ZIP/HTML)</option>
+    </select>
+    <input type="file" id="fileInput">
     <div class="progress-bar"><div class="progress-bar-inner" id="progress"></div></div>
   </div>
 
+  <!-- Tabs -->
+  <div class="tabs">
+    <button onclick="switchTab('templates')" id="tab-templates" class="active">Templates</button>
+    <button onclick="switchTab('blocks')" id="tab-blocks">Blocks</button>
+    <button onclick="switchTab('themes')" id="tab-themes">Themes</button>
+    <button onclick="switchTab('subscriptions')" id="tab-subscriptions">Subscriptions</button>
+  </div>
+
+  <!-- Content -->
   <div class="grid" id="libraryGrid"></div>
 
   <!-- Thumbnail Editor Modal -->
@@ -61,104 +80,124 @@
   </div>
 
 <script>
-let templates = JSON.parse(localStorage.getItem("sitegenLibrary")) || [];
+let library = JSON.parse(localStorage.getItem("sitegenLibrary")) || { templates: [], blocks: [], themes: [], subscriptions: [] };
+let currentTab = "templates";
 let currentEditIndex = null;
 let cropper;
 
-// Render library
+// Switch Tabs
+function switchTab(tab) {
+  currentTab = tab;
+  document.querySelectorAll(".tabs button").forEach(btn => btn.classList.remove("active"));
+  document.getElementById("tab-" + tab).classList.add("active");
+  renderLibrary();
+}
+
+// Render
 function renderLibrary() {
   const grid = document.getElementById("libraryGrid");
   grid.innerHTML = "";
-  templates.forEach((tpl, index) => {
+  library[currentTab].forEach((item, index) => {
     const card = document.createElement("div");
     card.className = "card";
-    card.innerHTML = `
-      <img src="${tpl.thumbnail}" alt="Template Thumbnail">
-      <h3>${tpl.name}</h3>
-      <button onclick="openThumbnailEditor(${index})">Edit Thumbnail</button>
-      <button onclick="deleteTemplate(${index})">Delete</button>
-    `;
+    if (currentTab === "templates") {
+      card.innerHTML = `
+        <img src="${item.thumbnail}" alt="Thumbnail">
+        <h3>${item.name}</h3>
+        <button onclick="openThumbnailEditor(${index})">Edit Thumbnail</button>
+        <button onclick="deleteItem(${index})">Delete</button>
+      `;
+    } else {
+      card.innerHTML = `
+        <h3>${item.name}</h3>
+        <button onclick="deleteItem(${index})">Delete</button>
+      `;
+    }
     grid.appendChild(card);
   });
 }
 
-// Handle file upload
+// Handle Upload
 document.getElementById("fileInput").addEventListener("change", async (e) => {
   const file = e.target.files[0];
   if (!file) return;
-
+  const type = document.getElementById("uploadType").value;
   const progress = document.getElementById("progress");
   progress.style.width = "0%";
 
-  const zip = await JSZip.loadAsync(file);
-  progress.style.width = "30%";
+  if (type === "template" || type === "subscription") {
+    const zip = await JSZip.loadAsync(file);
+    progress.style.width = "40%";
+    let indexFile = zip.file("index.html");
 
-  let indexFile = zip.file("index.html");
-  if (!indexFile) {
-    alert("No index.html found in ZIP");
-    return;
-  }
+    if (indexFile && type === "template") {
+      const htmlContent = await indexFile.async("string");
+      const iframe = document.createElement("iframe");
+      iframe.style.position = "absolute";
+      iframe.style.left = "-9999px";
+      document.body.appendChild(iframe);
+      iframe.contentDocument.open();
+      iframe.contentDocument.write(htmlContent);
+      iframe.contentDocument.close();
 
-  const htmlContent = await indexFile.async("string");
-  progress.style.width = "60%";
-
-  // Create hidden iframe to render and screenshot
-  const iframe = document.createElement("iframe");
-  iframe.style.position = "absolute";
-  iframe.style.left = "-9999px";
-  document.body.appendChild(iframe);
-  iframe.contentDocument.open();
-  iframe.contentDocument.write(htmlContent);
-  iframe.contentDocument.close();
-
-  iframe.onload = async () => {
-    const canvas = await html2canvas(iframe.contentDocument.body);
-    const thumbnail = canvas.toDataURL("image/png");
-
-    templates.push({
-      name: file.name.replace(".zip", ""),
-      thumbnail
-    });
-    localStorage.setItem("sitegenLibrary", JSON.stringify(templates));
+      iframe.onload = async () => {
+        const canvas = await html2canvas(iframe.contentDocument.body);
+        const thumbnail = canvas.toDataURL("image/png");
+        library.templates.push({ name: file.name.replace(".zip", ""), thumbnail });
+        localStorage.setItem("sitegenLibrary", JSON.stringify(library));
+        renderLibrary();
+        iframe.remove();
+        progress.style.width = "100%";
+        setTimeout(() => progress.style.width = "0%", 1500);
+      };
+    } else {
+      library[type + "s"].push({ name: file.name });
+      localStorage.setItem("sitegenLibrary", JSON.stringify(library));
+      renderLibrary();
+      progress.style.width = "100%";
+      setTimeout(() => progress.style.width = "0%", 1500);
+    }
+  } else {
+    library[type + "s"].push({ name: file.name });
+    localStorage.setItem("sitegenLibrary", JSON.stringify(library));
     renderLibrary();
-
     progress.style.width = "100%";
-    setTimeout(() => { progress.style.width = "0%"; }, 1500);
-    iframe.remove();
-  };
+    setTimeout(() => progress.style.width = "0%", 1500);
+  }
 });
 
-// Open thumbnail editor
+// Thumbnail Editor
 function openThumbnailEditor(index) {
   currentEditIndex = index;
   document.getElementById("thumbnailModal").style.display = "flex";
   const image = document.getElementById("cropperImage");
-  image.src = templates[index].thumbnail;
-
+  image.src = library.templates[index].thumbnail;
   if (cropper) cropper.destroy();
+
+  // Match box card ratio (width 100%, height 160px)
+  const aspectRatio = 4 / 3; // example (adjusts automatically)
   cropper = new Cropper(image, {
-    aspectRatio: 16 / 9,
+    aspectRatio: aspectRatio,
     viewMode: 1,
     dragMode: 'move',
     responsive: true,
     movable: true,
-    restore: false,
     background: false
   });
 }
 
-// Save cropped thumbnail
+// Save Thumbnail
 document.getElementById("saveThumbnail").onclick = () => {
   if (cropper && currentEditIndex !== null) {
-    const canvas = cropper.getCroppedCanvas({ width: 400, height: 225 });
-    templates[currentEditIndex].thumbnail = canvas.toDataURL("image/png");
-    localStorage.setItem("sitegenLibrary", JSON.stringify(templates));
+    const canvas = cropper.getCroppedCanvas({ width: 400, height: 160 });
+    library.templates[currentEditIndex].thumbnail = canvas.toDataURL("image/png");
+    localStorage.setItem("sitegenLibrary", JSON.stringify(library));
     renderLibrary();
     closeModal();
   }
 };
 
-// Close modal
+// Close Modal
 document.getElementById("closeModal").onclick = closeModal;
 function closeModal() {
   document.getElementById("thumbnailModal").style.display = "none";
@@ -166,9 +205,10 @@ function closeModal() {
   cropper = null;
 }
 
-function deleteTemplate(index) {
-  templates.splice(index, 1);
-  localStorage.setItem("sitegenLibrary", JSON.stringify(templates));
+// Delete
+function deleteItem(index) {
+  library[currentTab].splice(index, 1);
+  localStorage.setItem("sitegenLibrary", JSON.stringify(library));
   renderLibrary();
 }
 
