--- a/library.html
+++ b/library.html
@@ -3,216 +3,183 @@
 <head>
   <meta charset="UTF-8">
   <title>Sitegen Library</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" rel="stylesheet"/>
   <style>
-    body { background: #fff; color: #000; font-family: Arial, sans-serif; margin: 0; padding: 20px; }
-    h1 { font-size: 28px; margin-bottom: 20px; }
-    .upload-section { margin-bottom: 30px; display: flex; gap: 10px; flex-wrap: wrap; }
-    button, input[type=file], select {
-      background: #000; color: #fff; border: none; padding: 10px 15px;
-      border-radius: 6px; cursor: pointer; font-size: 14px;
+    body {
+      font-family: Arial, sans-serif;
+      background: #fff;
+      color: #000;
+      margin: 0;
+      padding: 20px;
     }
-    button:hover { opacity: 0.85; }
-    .progress-bar { width: 100%; height: 6px; background: #ddd; margin-top: 10px; border-radius: 3px; }
-    .progress-bar-inner { width: 0%; height: 100%; background: #000; transition: width 0.4s; border-radius: 3px; }
-    .tabs { display: flex; gap: 15px; margin-bottom: 20px; }
-    .tabs button { background: none; border: none; color: #000; font-size: 16px; cursor: pointer; }
-    .tabs button.active { font-weight: bold; text-decoration: underline; }
-    .grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; }
+    h1 {
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
+    .tabs {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+    .tabs button {
+      padding: 8px 16px;
+      border: 1px solid #000;
+      background: #fff;
+      cursor: pointer;
+    }
+    .tabs button.active {
+      background: #000;
+      color: #fff;
+    }
+    .upload-box {
+      border: 1px solid #000;
+      padding: 20px;
+      margin-bottom: 20px;
+    }
+    .progress {
+      width: 100%;
+      height: 8px;
+      background: #ddd;
+      margin-top: 10px;
+    }
+    .progress-bar {
+      height: 100%;
+      width: 0%;
+      background: #000;
+      transition: width 0.3s ease;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+    }
     .card {
-      border: 1px solid #000; border-radius: 8px; padding: 15px; background: #fff;
-      box-shadow: 2px 2px 6px rgba(0,0,0,0.1);
+      border: 1px solid #000;
+      padding: 10px;
+      text-align: center;
+      background: #fff;
     }
-    .card img { width: 100%; height: 160px; object-fit: cover; border: 1px solid #000; border-radius: 6px; }
-    .card h3 { font-size: 16px; margin: 10px 0; }
-    .modal {
-      display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0,0,0,0.7); justify-content: center; align-items: center;
+    .card img {
+      max-width: 100%;
+      height: 150px;
+      object-fit: cover;
+      border: 1px solid #ccc;
     }
-    .modal-content {
-      background: #fff; padding: 20px; border-radius: 10px; max-width: 90%; max-height: 90%; overflow: auto;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    }
-    .modal-content img { max-width: 100%; max-height: 70vh; }
-    .modal-buttons { margin-top: 15px; display: flex; gap: 10px; }
   </style>
 </head>
 <body>
 
-  <h1>📂 Sitegen Library</h1>
+  <h1>Sitegen Library</h1>
 
-  <!-- Upload -->
-  <div class="upload-section">
-    <select id="uploadType">
-      <option value="template">Template (ZIP)</option>
-      <option value="block">Block (HTML/JS)</option>
-      <option value="theme">Theme (CSS)</option>
-      <option value="subscription">Subscription Box (ZIP/HTML)</option>
-    </select>
-    <input type="file" id="fileInput">
-    <div class="progress-bar"><div class="progress-bar-inner" id="progress"></div></div>
-  </div>
-
-  <!-- Tabs -->
   <div class="tabs">
-    <button onclick="switchTab('templates')" id="tab-templates" class="active">Templates</button>
-    <button onclick="switchTab('blocks')" id="tab-blocks">Blocks</button>
-    <button onclick="switchTab('themes')" id="tab-themes">Themes</button>
-    <button onclick="switchTab('subscriptions')" id="tab-subscriptions">Subscriptions</button>
+    <button class="active" data-tab="templates">Templates</button>
+    <button data-tab="blocks">Blocks</button>
+    <button data-tab="themes">Themes</button>
+    <button data-tab="subscriptions">Subscriptions</button>
   </div>
 
-  <!-- Content -->
-  <div class="grid" id="libraryGrid"></div>
-
-  <!-- Thumbnail Editor Modal -->
-  <div class="modal" id="thumbnailModal">
-    <div class="modal-content">
-      <h2>Edit Thumbnail</h2>
-      <img id="cropperImage" src="">
-      <div class="modal-buttons">
-        <button id="saveThumbnail">Save</button>
-        <button id="closeModal">Cancel</button>
-      </div>
-    </div>
+  <div class="upload-box">
+    <label>Upload to: 
+      <select id="uploadType">
+        <option value="template">Template (ZIP)</option>
+        <option value="block">Block</option>
+        <option value="theme">Theme</option>
+        <option value="subscription">Subscription Box</option>
+      </select>
+    </label>
+    <input type="file" id="fileInput">
+    <div class="progress"><div class="progress-bar" id="progress"></div></div>
   </div>
 
-<script>
-let library = JSON.parse(localStorage.getItem("sitegenLibrary")) || { templates: [], blocks: [], themes: [], subscriptions: [] };
-let currentTab = "templates";
-let currentEditIndex = null;
-let cropper;
+  <div id="libraryContent" class="grid"></div>
 
-// Switch Tabs
-function switchTab(tab) {
-  currentTab = tab;
-  document.querySelectorAll(".tabs button").forEach(btn => btn.classList.remove("active"));
-  document.getElementById("tab-" + tab).classList.add("active");
-  renderLibrary();
-}
+  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
-// Render
-function renderLibrary() {
-  const grid = document.getElementById("libraryGrid");
-  grid.innerHTML = "";
-  library[currentTab].forEach((item, index) => {
-    const card = document.createElement("div");
-    card.className = "card";
-    if (currentTab === "templates") {
-      card.innerHTML = `
-        <img src="${item.thumbnail}" alt="Thumbnail">
-        <h3>${item.name}</h3>
-        <button onclick="openThumbnailEditor(${index})">Edit Thumbnail</button>
-        <button onclick="deleteItem(${index})">Delete</button>
-      `;
-    } else {
-      card.innerHTML = `
-        <h3>${item.name}</h3>
-        <button onclick="deleteItem(${index})">Delete</button>
-      `;
+  <script>
+    // Initialize library with all categories
+    let library = JSON.parse(localStorage.getItem("sitegenLibrary")) || {
+      templates: [],
+      blocks: [],
+      themes: [],
+      subscriptions: []
+    };
+    let currentTab = "templates";
+
+    function renderLibrary() {
+      const content = document.getElementById("libraryContent");
+      content.innerHTML = "";
+      library[currentTab].forEach((item, i) => {
+        const card = document.createElement("div");
+        card.className = "card";
+        if (item.thumbnail) {
+          card.innerHTML = `
+            <img src="${item.thumbnail}" alt="Thumbnail">
+            <p>${item.name}</p>
+          `;
+        } else {
+          card.innerHTML = `<p>${item.name}</p>`;
+        }
+        content.appendChild(card);
+      });
     }
-    grid.appendChild(card);
-  });
-}
 
-// Handle Upload
-document.getElementById("fileInput").addEventListener("change", async (e) => {
-  const file = e.target.files[0];
-  if (!file) return;
-  const type = document.getElementById("uploadType").value;
-  const progress = document.getElementById("progress");
-  progress.style.width = "0%";
+    // Tabs switching
+    document.querySelectorAll(".tabs button").forEach(btn => {
+      btn.addEventListener("click", () => {
+        document.querySelectorAll(".tabs button").forEach(b => b.classList.remove("active"));
+        btn.classList.add("active");
+        currentTab = btn.dataset.tab;
+        renderLibrary();
+      });
+    });
 
-  if (type === "template" || type === "subscription") {
-    const zip = await JSZip.loadAsync(file);
-    progress.style.width = "40%";
-    let indexFile = zip.file("index.html");
+    // File upload
+    document.getElementById("fileInput").addEventListener("change", async (e) => {
+      const file = e.target.files[0];
+      if (!file) return;
+      const type = document.getElementById("uploadType").value;
+      const progress = document.getElementById("progress");
+      progress.style.width = "0%";
 
-    if (indexFile && type === "template") {
-      const htmlContent = await indexFile.async("string");
-      const iframe = document.createElement("iframe");
-      iframe.style.position = "absolute";
-      iframe.style.left = "-9999px";
-      document.body.appendChild(iframe);
-      iframe.contentDocument.open();
-      iframe.contentDocument.write(htmlContent);
-      iframe.contentDocument.close();
+      // Ensure category exists
+      if (!library[type + "s"]) library[type + "s"] = [];
 
-      iframe.onload = async () => {
-        const canvas = await html2canvas(iframe.contentDocument.body);
-        const thumbnail = canvas.toDataURL("image/png");
-        library.templates.push({ name: file.name.replace(".zip", ""), thumbnail });
+      if (type === "template") {
+        const zip = await JSZip.loadAsync(file);
+        progress.style.width = "40%";
+        let indexFile = zip.file("index.html");
+
+        if (indexFile) {
+          const htmlContent = await indexFile.async("string");
+          const iframe = document.createElement("iframe");
+          iframe.style.position = "absolute";
+          iframe.style.left = "-9999px";
+          document.body.appendChild(iframe);
+          iframe.contentDocument.open();
+          iframe.contentDocument.write(htmlContent);
+          iframe.contentDocument.close();
+
+          iframe.onload = async () => {
+            const canvas = await html2canvas(iframe.contentDocument.body);
+            const thumbnail = canvas.toDataURL("image/png");
+            library.templates.push({ name: file.name.replace(".zip", ""), thumbnail });
+            localStorage.setItem("sitegenLibrary", JSON.stringify(library));
+            renderLibrary();
+            iframe.remove();
+            progress.style.width = "100%";
+            setTimeout(() => progress.style.width = "0%", 1500);
+          };
+        }
+      } else {
+        library[type + "s"].push({ name: file.name });
         localStorage.setItem("sitegenLibrary", JSON.stringify(library));
         renderLibrary();
-        iframe.remove();
         progress.style.width = "100%";
         setTimeout(() => progress.style.width = "0%", 1500);
-      };
-    } else {
-      library[type + "s"].push({ name: file.name });
-      localStorage.setItem("sitegenLibrary", JSON.stringify(library));
-      renderLibrary();
-      progress.style.width = "100%";
-      setTimeout(() => progress.style.width = "0%", 1500);
-    }
-  } else {
-    library[type + "s"].push({ name: file.name });
-    localStorage.setItem("sitegenLibrary", JSON.stringify(library));
+      }
+    });
+
     renderLibrary();
-    progress.style.width = "100%";
-    setTimeout(() => progress.style.width = "0%", 1500);
-  }
-});
-
-// Thumbnail Editor
-function openThumbnailEditor(index) {
-  currentEditIndex = index;
-  document.getElementById("thumbnailModal").style.display = "flex";
-  const image = document.getElementById("cropperImage");
-  image.src = library.templates[index].thumbnail;
-  if (cropper) cropper.destroy();
-
-  // Match box card ratio (width 100%, height 160px)
-  const aspectRatio = 4 / 3; // example (adjusts automatically)
-  cropper = new Cropper(image, {
-    aspectRatio: aspectRatio,
-    viewMode: 1,
-    dragMode: 'move',
-    responsive: true,
-    movable: true,
-    background: false
-  });
-}
-
-// Save Thumbnail
-document.getElementById("saveThumbnail").onclick = () => {
-  if (cropper && currentEditIndex !== null) {
-    const canvas = cropper.getCroppedCanvas({ width: 400, height: 160 });
-    library.templates[currentEditIndex].thumbnail = canvas.toDataURL("image/png");
-    localStorage.setItem("sitegenLibrary", JSON.stringify(library));
-    renderLibrary();
-    closeModal();
-  }
-};
-
-// Close Modal
-document.getElementById("closeModal").onclick = closeModal;
-function closeModal() {
-  document.getElementById("thumbnailModal").style.display = "none";
-  if (cropper) cropper.destroy();
-  cropper = null;
-}
-
-// Delete
-function deleteItem(index) {
-  library[currentTab].splice(index, 1);
-  localStorage.setItem("sitegenLibrary", JSON.stringify(library));
-  renderLibrary();
-}
-
-renderLibrary();
-</script>
+  </script>
 </body>
 </html>
