--- a/signup.html
+++ b/signup.html
@@ -1,98 +1,84 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sitegen – Signup</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    body { margin:0; font-family:ui-sans-serif,system-ui; background:#f7f7f7; color:#111827; }
-    
-    /* Header */
-    header { background:#fff; border-bottom:1px solid #e5e7eb; position:sticky; top:0; z-index:50; }
-    .header-inner { max-width:1200px; margin:0 auto; display:flex; justify-content:space-between; align-items:center; padding:16px 24px; }
-    .brand { font-weight:700; font-size:1.5rem; }
-    nav a { margin-left:16px; text-decoration:none; color:#111827; font-weight:500; }
-    .btn { padding:10px 16px; border-radius:8px; font-weight:600; cursor:pointer; border:none; transition:0.2s; }
-    .btn-black { background:#000; color:#fff; }
-    .btn-black:hover { opacity:0.9; transform:translateY(-1px); }
-    .btn-ghost { background:transparent; border:1px solid #d1d5db; color:#111827; }
-    .btn-ghost:hover { background:#f3f4f6; }
-
-    /* Main card */
-    main { display:flex; justify-content:center; align-items:center; min-height:calc(100vh - 72px); padding:24px; }
-    .card { background:#fff; border-radius:16px; padding:32px; max-width:400px; width:100%; box-shadow:0 10px 24px rgba(0,0,0,.06); transition:transform 0.2s; }
-    .card:hover { transform:translateY(-2px); box-shadow:0 18px 40px rgba(0,0,0,.12); }
-
-    /* Typography */
-    .title { font-size:1.75rem; font-weight:800; text-align:center; margin-bottom:16px; }
-    .field { margin-bottom:12px; }
-    input { width:100%; padding:12px; border-radius:10px; border:1px solid #d1d5db; font-size:1rem; outline:none; }
-    input:focus { border-color:#000; box-shadow:0 0 0 3px rgba(0,0,0,.06); }
-
-    /* Divider */
-    .divider { display:flex; align-items:center; gap:10px; margin:16px 0; color:#9ca3af; font-size:.85rem; }
-    .divider span { flex:1; height:1px; background:#e5e7eb; }
-
-    /* Footer */
-    footer { text-align:center; padding:16px 0; color:#6b7280; font-size:0.875rem; border-top:1px solid #e5e7eb; background:#fff; position:relative; bottom:0; }
-
-    /* Toast container */
-    #toastContainer { position:fixed; top:16px; right:16px; display:flex; flex-direction:column; gap:8px; z-index:100; }
-
-    /* Google button */
-    #googleSignupBtn { display:flex; align-items:center; justify-content:center; gap:8px; width:100%; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sitegen Hosting - Sign Up</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <!-- Header -->
-  <header>
-    <div class="header-inner">
-      <div class="brand">Sitegen Hosting</div>
-      <nav>
-        <a href="plans.html">Plans</a>
-        <a href="features.html">Features</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+<body class="bg-white text-black">
+
+  <!-- Navbar (same as index page) -->
+  <header class="bg-white shadow-md sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto flex justify-between items-center p-4">
+      <h1 class="text-2xl font-bold text-black">Sitegen Hosting</h1>
+      <nav class="space-x-6 hidden md:flex">
+        <a href="../plans.html" class="hover:text-black">Plans</a>
+        <a href="features.html" class="hover:text-black">Features</a>
+        <a href="../about.html" class="hover:text-black">About</a>
+        <a href="../contact.html" class="hover:text-black">Contact</a>
       </nav>
-      <div>
-        <a href="login.html" class="btn btn-ghost">Login</a>
-        <a href="signup.html" class="btn btn-black">Get Started</a>
+      <div class="space-x-3">
+        <a href="../login.html" class="px-4 py-2 text-sm border border-black text-black rounded-lg hover:bg-gray-100">Login</a>
+        <a href="../signup.html" class="px-4 py-2 text-sm bg-black text-white rounded-lg hover:bg-gray-800">Get Started</a>
       </div>
     </div>
   </header>
 
   <!-- Signup Card -->
-  <main>
-    <section class="card">
-      <h2 class="title">Create Your Account</h2>
+  <main class="flex justify-center items-center min-h-[calc(100vh-72px)] py-20">
+    <section class="bg-white p-10 rounded-2xl shadow-xl w-full max-w-md">
+      <h2 class="text-3xl font-extrabold mb-6 text-center">Create Your Account</h2>
 
-      <form id="signupForm2" novalidate>
-        <div class="field"><input type="text" id="name" placeholder="Full Name" required /></div>
-        <div class="field"><input type="email" id="email" placeholder="Email" required /></div>
-        <div class="field"><input type="password" id="password" placeholder="Password" required /></div>
+      <form id="signupForm2" class="space-y-4" novalidate>
+        <input type="text" id="name" placeholder="Full Name" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-black" required>
+        <input type="email" id="email" placeholder="Email" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-black" required>
+        <input type="password" id="password" placeholder="Password" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-black" required>
 
-        <button type="submit" class="btn btn-black">Sign Up</button>
-        <button type="button" id="resendVerificationBtn" class="btn btn-ghost" disabled>Resend Verification</button>
-        <button type="button" id="goToLoginBtn" class="btn btn-ghost">Already have an account? Login</button>
+        <button type="submit" class="w-full py-3 bg-black text-white font-semibold rounded-lg hover:bg-gray-800 transition">Sign Up</button>
+        <button type="button" id="resendVerificationBtn" class="w-full py-3 border border-black text-black rounded-lg hover:bg-gray-100 transition hidden">Resend Verification</button>
+        <button type="button" id="goToLoginBtn" class="w-full py-3 border border-black text-black rounded-lg hover:bg-gray-100 transition">Already have an account? Login</button>
       </form>
 
-      <div class="divider"><span></span> OR <span></span></div>
+      <div class="flex items-center my-6 text-gray-500">
+        <span class="flex-1 h-px bg-gray-300"></span>
+        <span class="mx-3">OR</span>
+        <span class="flex-1 h-px bg-gray-300"></span>
+      </div>
 
-      <button type="button" id="googleSignupBtn" class="btn btn-ghost">
-        <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google" width="18" height="18"/>
-        Continue with Google
+      <button type="button" id="googleSignupBtn" class="w-full flex items-center justify-center gap-3 py-3 border border-black rounded-lg hover:bg-gray-100 transition">
+        <img src="https://www.svgrepo.com/show/475656/google-color.svg" alt="Google" class="w-5 h-5"> Continue with Google
       </button>
     </section>
   </main>
 
-  <!-- Footer -->
-  <footer>
-    &copy; 2025 Sitegen Hosting. All rights reserved.
+  <!-- Footer (same as index page) -->
+  <footer class="bg-gray-900 text-gray-300 py-10">
+    <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-3 gap-8">
+      <div>
+        <h4 class="text-xl font-bold text-white mb-3">Sitegen Hosting</h4>
+        <p>Reliable hosting solutions to power your online journey.</p>
+      </div>
+      <div>
+        <h5 class="text-lg font-semibold text-white mb-2">Quick Links</h5>
+        <ul class="space-y-1 text-sm">
+          <li><a href="../plans.html" class="hover:text-white">Plans</a></li>
+          <li><a href="features.html" class="hover:text-white">Features</a></li>
+          <li><a href="../about.html" class="hover:text-white">About Us</a></li>
+          <li><a href="../contact.html" class="hover:text-white">Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <h5 class="text-lg font-semibold text-white mb-2">Get in Touch</h5>
+        <p>Email: support@sitegenhosting.com</p>
+        <p>Phone: +1 (800) 123-4567</p>
+      </div>
+    </div>
+    <div class="mt-8 text-center text-sm text-gray-500">© 2025 Sitegen Hosting. All rights reserved.</div>
   </footer>
 
   <!-- Toasts -->
-  <div id="toastContainer"></div>
+  <div id="toastContainer" class="fixed top-4 right-4 flex flex-col gap-2 z-50"></div>
 
   <!-- Scripts -->
   <script type="module" src="firebase-login.js"></script>
